GNOME Bugzilla – Bug 731346
pull: Emit a better error if the remote isn't found
Last modified: 2014-06-19 16:05:15 UTC
The generic GKeyFile error isn't quite informative enough here. I hit this with the new compose process where we don't automatically inject a configured remote into the generated disk images; we expect people to add them.
Created attachment 278053 [details] [review] pull: Emit a better error if the remote isn't found
Created attachment 278740 [details] [review] pull: Emit a better error if the remote isn't found The generic GKeyFile error isn't quite informative enough here. I hit this with the new compose process where we don't automatically inject a configured remote into the generated disk images; we expect people to add them.
Review of attachment 278740 [details] [review]: This looks good to me. You could also mention the procedure for adding a remote, but I don't know how verbose you want to be here.
I've strugged a bit with "single sentence" error messages versus "friendly" errors on the command line. I think probably if we have more text here though it should go in the docs. Attachment 278740 [details] pushed as bb043b3 - pull: Emit a better error if the remote isn't found